[tool.poetry]
name = "pyrelight"
version = "0"
description = "Personal music library manager, replaces iTunes."
authors = ["Radian LLC <contact+pyrelight@radian.codes"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
